--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -39,7 +39,7 @@ h1{
 
 
 header{
-    background-image:linear-gradient(rgba(255,255,255,0),rgba(255,255,255,0)) , url("../img/back3.jpg");
+    background-image:linear-gradient(rgba(255,255,255,0.2),rgba(255,255,255,0.2)) , url("../img/back3.jpg");
     background-size: cover;
     height: 100vh;
 }
@@ -51,38 +51,36 @@ header{
     left: 65%;
     transform: translate(-50% ,-60%);
 }
-.logo{
-    width:100px;
-    height: auto;
-    position: absolute;
-    top:80%;
-    margin-bottom:35px;
-    margin-right: 55px;
 
-}
 .main{
     float: right;
     list-style: none;
     margin-top: 35px;
-    margin-right: 120px;
+    margin-right: 140px;
 }
 
 .main li{
     display: inline-block;
-     margin-left: 30px;
+     margin-left: 50px;
      padding-bottom: 5px;
-     transition: border-bottom 0.3s;    
-     border-bottom: 3px solid transparent;
+     transition: border-bottom 0.s , background_color 0.5s;    
+     border-bottom: 3px solid #ffb8b6;
+     padding: 10px;
 }
-.main li:hover{
-  border-bottom: 3px solid #ffb8b6;
+.main li:hover
+,.main li:active
+{
+ font-size: 200%;
+
 }
+
 
 .main li a{
     text-decoration: none;
     color: #555;
+        /* transition: color 0.5s;    
+*/
 }
-
 
 /******************************************************************************************************************/
 /* buttons                 /
@@ -115,14 +113,12 @@ header{
 .lli2{
     border: 1px solid #ffb8b6;
     color: #ffb8b6;
-    border: 1px solid #ffb8b6;
-
 }
 
 .lli2:active,.lli2:hover{
     background-color: #f44;
-    color: #fff;
-        transition: background-color 0.5s , color 0.5s;
+    color:#fff;
+    transition: background-color 0.5s , color 0.5s;
 
 }
 
